<resources>
<string name="app_name">QuickBook</string>
<string name="Anasayfa">Home</string>
<string name="quickBookYazş">QuickBook!</string>
<string name="signinsignupyazi">Sign in/Sign Up</string>
<string name="fiyatlar">Starting from $20</string>
<string name="readyGoyazi">Ready Go!</string>
    <string name="text1" translatable="false">Do you want to book?</string>
    <string name="text2" translatable="false">Do you want it quick?</string>
    <string name="text3" translatable="false">Then you are at the right place</string>









</resources>